# threejs-to-bevy

./: .gitignore  AGENTS.md  CHALLENGES.md  CLAUDE.md  ENGINE-CODE-REVIEW-2026-07-07.md  PRD-STALENESS-REPORT-2026-07-07.md  README.md  SESSION-LEARNINGS.md  STYLIZED-NATURE-BEVY-PARITY-REPORT-2026-07-07.md  llms-full.txt  llms.txt  package.json  pnpm-lock.yaml  tasklist.txt  tsconfig.base.json
.cursor/rules/: open-pr-after-validation.mdc
.github/workflows/: ci.yml  metro-surfer-heist-pages.yml
.husky/: pnpm-run  pre-commit  pre-push
docs/: README.md  ROADMAP.md  STATUS.md  advanced-features-roadmap.md  ai-workflows.md  architecture.md  asset-pipeline.md  bevy-feature-parity.md  concept.md  conventions.md  developer-workflow.md  diagnostics.md  ecs.md  feature-maturity.md  goals.md  ir.md  references.md  render-look-profiles.md  roadmap.md  runtime-adapters.md  scripting-api-abstraction-recommendations.md  scripting-api.md  scripting.md  sdk.md  tech-stack.md  ui.md  verify-v3.md  verify-v4.md  verify-v5.md  verify-v6.md  verify-v7.md  verify-v8-procedural-mesh.md  visual-parity-policy.md
docs/PRDs/: AGENT-ENGINE-WISHLIST-2026-07-11.md  AUTHORING-TRIAL-CHESS-CODEX-2026-07-12.md  AUTHORING-TRIAL-ORB-REACTOR-2026-07-11.md  NEXT-FOCUS-2026-07-11.md  PRD-advanced-physics-major-games-2026-07-22.md  PRD-authoring-smoothness-2026-07-11.md  PRD-off-recipe-authoring-efficiency-2026-07-15.md  README.md  authoring-abstractions-and-polished-defaults.md  cleanup-versioned-debt.md  contact-shadows-exposure-calibration-2026-07-10.md  engine-improvement-candidates-2026-07-07.md  engine-improvement-candidates-2026-07-12.md  native-ui-visual-enhancements.md  overlay-system-improvements-2026-07-12.md  procedural-generated-mesh-lod-contract-2026-07-14.md  procedural-geometry-v2-2026-07-11.md  visual-parity-pacific-groundwork-2026-07-23.md  visual-parity-pacific-mastery-2026-07-23.md  webgpu-default-webgl-fallback-2026-07-09.md
docs/architecture/: README.md  concept.md  tech-stack.md  typed-game-spec.md
docs/audits/: CODEBASE_QUALITY_AUDIT_2026-06-25.md  CODEBASE_QUALITY_REPORT_2026-06-18.md  CODEBASE_REVIEW_REPORT.md  FOUNDATIONAL_BOTTLENECK_AUDIT_2026-07-05.md  PHYSICS_SYSTEM_AUDIT_2026-07-13.md  THREEJS_BEVY_RUST_GAP_AUDIT_2026-07-06.md  TOKEN_EFFICIENCY_AUDIT_2026-07-06.md  advanced-physics-phase-7-authoring-review-2026-07-22.md  advanced-physics-prd-implementation-review-2026-07-22.md  battle-of-pacific-abstraction-report-2026-07-23.md  (+6 more)
examples/: AGENTS.md  manifest.json
runtime-bevy/: AGENTS.md  Cargo.toml  cef-runtime-manifest.json  clippy.toml
runtime-bevy/crates/threenative_components/: Cargo.toml
runtime-bevy/crates/threenative_components/src/: lib.rs
runtime-bevy/crates/threenative_loader/: Cargo.toml
runtime-bevy/crates/threenative_loader/src/: bundle.rs  generated_mesh.rs  lib.rs  paths.rs  types.rs
runtime-bevy/crates/threenative_loader/tests/: load_bundle.rs
runtime-bevy/crates/threenative_runtime/: Cargo.toml
runtime-bevy/crates/threenative_runtime/src/: advanced_physics_benchmark.rs  animation.rs  animation_physics_residuals.rs  animation_physics_residuals_trace.rs  animation_trace.rs  asset_load_trace.rs  asset_reload.rs  assets.rs  audio.rs  audio_lifecycle_trace.rs  audio_spatial_trace.rs  bevy_catalog_residuals.rs  cameras.rs  capture.rs  character.rs  character_trace.rs  component_diff.rs  conformance.rs  conformance_cli.rs  countdowns.rs  debug_overlay.rs  drag_picking_trace.rs  emissive_marker_postprocess.wgsl  emissive_postprocess.rs  environment.rs  environment_content_trace.rs  first_person.rs  game_flow.rs  game_flow_trace.rs  gizmo_geometry.rs  gltf_scene_handles.rs  height_fog_postprocess.rs  height_fog_postprocess.wgsl  input.rs  input_ui_polish.rs  input_ui_polish_trace.rs  interaction_residual_trace.rs  interactions.rs  kinematic_mover.rs  lib.rs  (+77 more)
runtime-bevy/crates/threenative_runtime/src/map_world/: entities.rs  physics.rs  rendering.rs
runtime-bevy/crates/threenative_runtime/src/overlay_cef/: mod.rs
runtime-bevy/crates/threenative_runtime/src/rendering/: contact_shadows.rs
runtime-bevy/crates/threenative_runtime/src/ui/: interactions.rs  traces.rs  visuals.rs  widgets.rs
runtime-bevy/crates/threenative_runtime/tests/: animation.rs  animation_physics_residuals.rs  asset_catalog_residuals.rs  asset_reload.rs  assets.rs  audio.rs  cameras.rs  character.rs  conformance.rs  contact_shadows.rs  debug_overlay.rs  ecs_catalog_residuals.rs  environment.rs  example_bundle.rs  first_person.rs  game_loop_contract.rs  gizmo_geometry.rs  gltf_scene_handles.rs  input.rs  input_rebinding.rs  input_ui_polish.rs  interactions.rs  kinematic_mover.rs  map_world.rs  mesh_bounds.rs  overlay.rs  overlay_cef.rs  overlay_host.rs  path_sampling.rs  performance_metrics.rs  persistence.rs  persistence_reload.rs  persistence_storage.rs  physics.rs  physics_debug.rs  physics_destruction.rs  physics_sensors.rs  physics_vehicle.rs  picking_drag.rs  production_hardening.rs  (+20 more)
runtime-bevy/crates/threenative_runtime/tests/support/: mod.rs
scripts/: artifact-paths.mjs  bisect-v3-overexposure.mjs  build-asset-source-catalog.mjs  build-asset-source-catalog.test.mjs  build-v8-overlay-webview-overlay.mjs  check-ai-docs.test.mjs  check-artifact-layout.mjs  check-artifact-layout.test.mjs  check-color-parity-contract.mjs  check-color-parity-contract.test.mjs  check-current-names.mjs  check-current-names.test.mjs  check-distribution-contract.mjs  check-distribution-contract.test.mjs  check-docs-v1.mjs  check-docs-v1.test.mjs  check-docs-v10.mjs  check-docs-v10.test.mjs  check-docs-v2.mjs  check-docs-v2.test.mjs  check-docs-v3.mjs  check-docs-v3.test.mjs  check-docs-v4.mjs  check-docs-v4.test.mjs  check-docs-v5.mjs  check-docs-v5.test.mjs  check-docs-v6.mjs  check-docs-v6.test.mjs  check-docs-v7.mjs  check-docs-v7.test.mjs  check-docs-v8.mjs  check-docs-v8.test.mjs  check-docs-v9.mjs  check-docs-v9.test.mjs  check-godzilla-sources.mjs  check-godzilla-sources.test.mjs  check-quality-v10.mjs  check-quality-v10.test.mjs  check-rust-quality.mjs  check-rust-quality.test.mjs  (+166 more)
(+1990 files in other folders)
