[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
version = "0.1.0"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
excessive_nesting = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"
type_complexity = "warn"

[profile.dev]
debug = 1
incremental = false
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 3

[profile.test]
debug = 0
incremental = false
strip = "debuginfo"
