[package]
name = "threenative_runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "threenative_runtime"
path = "src/main.rs"

[[bin]]
name = "threenative_capture"
path = "src/capture.rs"

[[bin]]
name = "threenative_conformance"
path = "src/conformance_cli.rs"

[[bin]]
name = "threenative_systems_log"
path = "src/systems_log.rs"

[[bin]]
name = "threenative_character_trace"
path = "src/character_trace.rs"

[[bin]]
name = "threenative_animation_trace"
path = "src/animation_trace.rs"

[[bin]]
name = "threenative_audio_lifecycle_trace"
path = "src/audio_lifecycle_trace.rs"

[dependencies]
bevy = "=0.14.2"
quickjs-rusty = "=0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
threenative_components = { path = "../threenative_components" }
threenative_loader = { path = "../threenative_loader" }
