[package]
name = "threenative_runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "threenative_runtime"
path = "src/main.rs"

[[bin]]
name = "threenative_capture"
path = "src/capture.rs"

[[bin]]
name = "threenative_conformance"
path = "src/conformance_cli.rs"

[[bin]]
name = "threenative_systems_log"
path = "src/systems_log.rs"

[[bin]]
name = "threenative_character_trace"
path = "src/character_trace.rs"

[[bin]]
name = "threenative_animation_trace"
path = "src/animation_trace.rs"

[[bin]]
name = "threenative_animation_physics_residuals_trace"
path = "src/animation_physics_residuals_trace.rs"

[[bin]]
name = "threenative_input_ui_polish_trace"
path = "src/input_ui_polish_trace.rs"

[[bin]]
name = "threenative_persistence_reload_trace"
path = "src/persistence_reload_trace.rs"

[[bin]]
name = "threenative_production_hardening_trace"
path = "src/production_hardening_trace.rs"

[[bin]]
name = "threenative_rendering_residuals_trace"
path = "src/rendering_residuals_trace.rs"

[[bin]]
name = "threenative_runtime_gameplay_host_trace"
path = "src/runtime_gameplay_host_trace.rs"

[[bin]]
name = "threenative_ui_navigation_trace"
path = "src/ui_navigation_trace.rs"

[[bin]]
name = "threenative_audio_lifecycle_trace"
path = "src/audio_lifecycle_trace.rs"

[[bin]]
name = "threenative_environment_content_trace"
path = "src/environment_content_trace.rs"

[[bin]]
name = "threenative_runtime_query_diffing_trace"
path = "src/runtime_query_diffing_trace.rs"

[[bin]]
name = "threenative_ui_persistence_settings_facades_trace"
path = "src/ui_persistence_settings_facades_trace.rs"

[[bin]]
name = "threenative_rigid_body_trace"
path = "src/rigid_body_trace.rs"

[[bin]]
name = "threenative_asset_load_trace"
path = "src/asset_load_trace.rs"

[[bin]]
name = "threenative_v9_physics_character_trace"
path = "src/v9_physics_character_trace.rs"

[dependencies]
bevy = { version = "=0.14.2", features = ["pbr_multi_layer_material_textures", "pbr_transmission_textures"] }
image = "0.25.10"
quickjs-rusty = "=0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
threenative_components = { path = "../threenative_components" }
threenative_loader = { path = "../threenative_loader" }
gtk = { version = "0.18.2", optional = true }
wry = { version = "0.53.5", features = ["transparent"], optional = true }
winit = { version = "0.30.13", default-features = false, optional = true }

[features]
default = []
native-webview = ["dep:gtk", "dep:winit", "dep:wry"]
