[package]
name = "threenative_runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "threenative_runtime"
path = "src/main.rs"

[[bin]]
name = "threenative_capture"
path = "src/capture.rs"

[[bin]]
name = "threenative_conformance"
path = "src/conformance_cli.rs"

[[bin]]
name = "threenative_interaction_residual_trace"
path = "src/interaction_residual_trace.rs"

[[bin]]
name = "threenative_game_flow_trace"
path = "src/game_flow_trace.rs"

[[bin]]
name = "threenative_sequence_trace"
path = "src/sequence_trace.rs"

[[bin]]
name = "threenative_systems_log"
path = "src/systems_log.rs"

[[bin]]
name = "threenative_character_trace"
path = "src/character_trace.rs"

[[bin]]
name = "threenative_animation_trace"
path = "src/animation_trace.rs"

[[bin]]
name = "threenative_animation_physics_residuals_trace"
path = "src/animation_physics_residuals_trace.rs"

[[bin]]
name = "threenative_input_ui_polish_trace"
path = "src/input_ui_polish_trace.rs"

[[bin]]
name = "threenative_persistence_reload_trace"
path = "src/persistence_reload_trace.rs"

[[bin]]
name = "threenative_production_hardening_trace"
path = "src/production_hardening_trace.rs"

[[bin]]
name = "threenative_rendering_residuals_trace"
path = "src/rendering_residuals_trace.rs"

[[bin]]
name = "threenative_runtime_gameplay_host_trace"
path = "src/runtime_gameplay_host_trace.rs"

[[bin]]
name = "threenative_ui_navigation_trace"
path = "src/ui_navigation_trace.rs"

[[bin]]
name = "threenative_ui_native_trace"
path = "src/ui_native_trace.rs"

[[bin]]
name = "threenative_audio_lifecycle_trace"
path = "src/audio_lifecycle_trace.rs"

[[bin]]
name = "threenative_environment_content_trace"
path = "src/environment_content_trace.rs"

[[bin]]
name = "threenative_runtime_query_diffing_trace"
path = "src/runtime_query_diffing_trace.rs"

[[bin]]
name = "threenative_runtime_prefabs_hierarchy_trace"
path = "src/runtime_prefabs_hierarchy_trace.rs"

[[bin]]
name = "threenative_spawner_trace"
path = "src/spawner_trace.rs"

[[bin]]
name = "threenative_ui_persistence_settings_facades_trace"
path = "src/ui_persistence_settings_facades_trace.rs"

[[bin]]
name = "threenative_rigid_body_trace"
path = "src/rigid_body_trace.rs"

[[bin]]
name = "threenative_asset_load_trace"
path = "src/asset_load_trace.rs"

[[bin]]
name = "threenative_v9_physics_character_trace"
path = "src/v9_physics_character_trace.rs"

[[bin]]
name = "threenative_physics_self_verification_trace"
path = "src/physics_self_verification_trace.rs"

[[bin]]
name = "threenative_advanced_physics_benchmark"
path = "src/advanced_physics_benchmark.rs"

[dependencies]
bevy = { version = "=0.14.2", features = ["jpeg", "mp3", "pbr_multi_layer_material_textures", "pbr_transmission_textures", "webp"] }
cef = { version = "=150.0.0", default-features = false, optional = true }
image = "0.25.10"
quickjs-rusty = "=0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
threenative_components = { path = "../threenative_components" }
threenative_loader = { path = "../threenative_loader" }
rapier3d = "0.33.0"

[features]
default = []
native-overlay-cef = ["dep:cef"]

[package.metadata.threenative.native-overlay-cef]
cef-crate = "150.0.0+150.0.10"
cef-distribution = "150.0.10+g8042e43"
chromium = "150.0.7871.101"
linux-x86_64-archive-sha1 = "74a1186c566cbbac38c6b0f5298fc0bcfc1b9606"
linux-x86_64-archive-sha256 = "6c1d4891ef3886e3ccf65d09288d8304e3f7e3724a47c93293e2bd63e76528e4"
license-path = "../../third_party/cef/LICENSE.txt"
license-sha256 = "058c3827ffb827ff3edda471ae7e1bb1d1aa5931985f0126043ccd33409e792f"
